--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div style="max-width: 800px; margin: 0 auto; padding: ${baseSize * 2}px;">
             <div style="background: ${surfaceColor}; border-radius: 16px; padding: ${baseSize * 2}px; box-shadow: 0 8px 32px rgba(0,0,0,0.3);">
               <h1 style="font-size: ${baseSize * 1.8}px; font-weight: 800; margin-bottom: ${baseSize * 0.5}px; text-align: center; color: ${textColor}; line-height: 1.2;">${config.game_title || defaultConfig.game_title}</h1>
-              <p style="font-size: ${baseSize * 1.5}px; font-weight: 700; margin-bottom: ${baseSize}px; text-align: center; color: ${secondaryColor};">(CS_i)</p>
+              <p style="font-size: ${baseSize * 1.5}px; font-weight: 700; margin-bottom: ${baseSize}px; text-align: center; color: ${secondaryColor};">(csIdentifier)</p>
               
               <h2 style="font-size: ${baseSize * 1.5}px; font-weight: 700; margin-top: ${baseSize * 1.5}px; margin-bottom: ${baseSize}px; color: ${primaryColor};">${config.instructions_header || defaultConfig.instructions_header}</h2>
               
@@ -278,7 +278,7 @@
             <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: ${baseSize * 0.5}px;">
               <div>
                 <h1 style="font-size: ${baseSize * 1.1}px; font-weight: 800; color: ${textColor}; margin: 0; line-height: 1.2;">${config.game_title || defaultConfig.game_title}</h1>
-                <p style="font-size: ${baseSize * 0.85}px; font-weight: 700; color: ${secondaryColor}; margin: 0;">(CS_i)</p>
+                <p style="font-size: ${baseSize * 0.85}px; font-weight: 700; color: ${secondaryColor}; margin: 0;">(csIdentifier)</p>
               </div>
               <div style="display: flex; gap: ${baseSize * 0.8}px; font-size: ${baseSize * 0.75}px;">
                 <span style="background: ${primaryColor}; padding: ${baseSize * 0.4}px ${baseSize * 0.7}px; border-radius: 6px; font-weight: 700;">📊 ${gameState.score}</span>
@@ -579,5 +579,5 @@
 
     render();
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9ac5c75125f21dcd',t:'MTc2NTQ2NDQ2MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9ac5f6d0406cf50a',t:'MTc2NTQ2NjQwNi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
